# pyenum

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  pyproject.toml  release.toml
.claude/: settings.json
.claude/skills/speckit-git-initialize/: SKILL.md
.claude/skills/speckit-git-validate/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-specify/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/extensions/git/: README.md
.specify/extensions/git/commands/: speckit.git.initialize.md  speckit.git.validate.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/specs/001-pyenum-derive/: data-model.md  perf-notes.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
.specify/specs/001-pyenum-derive/checklists/: requirements.md
.specify/specs/001-pyenum-derive/contracts/: derive-contract.md  trait-contract.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
crates/pyenum/: Cargo.toml
crates/pyenum-derive/: Cargo.toml
crates/pyenum-derive/src/: codegen.rs  lib.rs  parse.rs  reserved.rs  validate.rs
crates/pyenum-derive/tests/: trybuild.rs
crates/pyenum-derive/tests/ui/accept/: basic_enum.rs  int_discriminants.rs  strenum_auto_lowercase.rs  strenum_explicit_value.rs
crates/pyenum-derive/tests/ui/fail/: auto_resolves_to_prior_intenum.rs  auto_resolves_to_prior_intenum.stderr  bad_base.rs  bad_base.stderr  duplicate_auto_flag.rs  duplicate_auto_flag.stderr  duplicate_auto_intenum.rs  duplicate_auto_intenum.stderr  duplicate_auto_lowercase.rs  duplicate_auto_lowercase.stderr  duplicate_str_value.rs  duplicate_str_value.stderr  empty_enum.rs  empty_enum.stderr  generic_enum.rs  generic_enum.stderr  intenum_str_value.rs  intenum_str_value.stderr  lifetime_enum.rs  lifetime_enum.stderr  reserved_name_value.rs  reserved_name_value.stderr  strenum_int_discriminant.rs  strenum_int_discriminant.stderr  struct_variant.rs  struct_variant.stderr  tuple_variant.rs  tuple_variant.stderr  value_and_discriminant.rs  value_and_discriminant.stderr
crates/pyenum-test/: Cargo.toml
crates/pyenum-test/src/: lib.rs
crates/pyenum/benches/: cache.rs  comparison.rs
crates/pyenum/src/: cache.rs  construct.rs  lib.rs  register.rs  trait_def.rs
python/: pyproject.toml
scripts/: coverage.sh  post-write.sh
specs/001-pyenum-derive/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pyenum-derive/checklists/: requirements.md
specs/001-pyenum-derive/contracts/: derive-contract.md  registration-contract.md  trait-contract.md
tests/: conftest.py  pyenum_test.pyi  test_cache.py  test_conversion.py  test_pickle.py  test_protocol_enum.py  test_protocol_flag.py  test_protocol_intenum.py  test_protocol_intflag.py  test_protocol_language.py  test_protocol_strenum.py
