[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "pyenum-test"
version = "0.0.1"
description = "cdylib fixture for pyenum's Python integration test suite (not published)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wakita181009" }]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "pydantic>=2.13",
    "fastapi>=0.136",
    "httpx>=0.28",
    "sqlalchemy>=2.0.49",
]

[tool.maturin]
manifest-path = "crates/pyenum-test/Cargo.toml"
module-name = "pyenum_test"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error",
]
