[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "pyenum-test"
version = "0.0.2"
description = "cdylib fixture for pyenum's Python integration test suite (not published)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "wakita181009" }]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[tool.maturin]
manifest-path = "crates/pyenum-test/Cargo.toml"
module-name = "pyenum_test"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error",
]
