[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pyenum-test"
version = "0.0.1"
description = "cdylib fixture for pyenum's Python integration test suite (not published)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tetsuya Wakita" }]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "pydantic>=2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "sqlalchemy>=2",
]

[tool.maturin]
# The cdylib fixture lives in the Rust workspace; maturin builds it from
# there via an explicit manifest path. The active PyO3 version is picked
# up from the cargo `--features pyo3-0_XX` flag passed on the command line
# (see `.github/workflows/test.yml` for the CI spelling).
manifest-path = "../crates/pyenum-test/Cargo.toml"
module-name = "pyenum_test"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["../tests"]
addopts = "-q"
filterwarnings = [
    "error",
]
