[package]
name = "pyenum-test"
description = "cdylib fixture for pyenum's Python integration test suite (workspace-only, not published)."
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[package.metadata.release]
release = false

[lib]
name = "pyenum_test"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyenum = { path = "../pyenum" }
pyo3 = { workspace = true, features = ["extension-module", "abi3-py311"] }
