[package]
name = "pyenum"
description = "Expose Rust enums to Python as real enum.Enum subclasses via PyO3."
version = "0.0.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
keywords = ["pyo3", "python", "enum", "derive", "ffi"]
categories = ["api-bindings", "rust-patterns"]

[lib]
name = "pyenum"
path = "src/lib.rs"

[dependencies]
pyenum-derive = { path = "../pyenum-derive", version = "=0.0.4" }
pyo3 = { workspace = true, features = ["abi3-py310"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support", "html_reports"] }

[[bench]]
name = "cache"
harness = false
